--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,14 @@ footer {
     font-size: 1.2rem;
     margin-bottom: 10px;
 }
+
+a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+}
+
+a:hover {
+    color: #191818;
+    cursor: pointer;
+}
